@@ -1,3 +1,8 @@
+2010-04-09 Borut Razem <borut.razem AT siol.net>
+
+	* device/include/mcs51/msm8xc154s.h:
+	  sdcc library license changed to GPL+LE
+
 2010-04-08 Philipp Klaus Krause <pkk AT spth.de>
 	* support/regression/tests/bug-2982135.c:
 	  Fixed a stupid mistake.
